# libcam1394

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.in  cvscompile  libcam1394.pc  libcam1394.pc.in  libcam1394.spec.in  mkinstalldirs
cam1394/: 1394utly.cc  1394utly.h  Makefile  Makefile.am  Makefile.in  cam1394.cc  cam1394.cc.ol  cam1394_feat.cc  cam1394_save.cc  common.h  dump_csr.cpp  mmx_bgs.s  mmx_image.h  view1394.cc  xview.cc  xview.h
debian/: Makefile.am  cam1394.files  cam1394.install  changelog  changelog.in  control  copyright  libcam1394-dev.dirs  libcam1394-dev.install  libcam1394.install  rules
libcam1394/: 1394cam.cc  1394cam.h  1394cam_drv.cc  1394cam_drv.h  1394cam_registers.h  Doxyfile  Doxyfile.in  Makefile.am  common.h  drv_isofb.cc  drv_juju.cc  drv_video1394.cc  yuv.h  yuv2rgb.cc
sample/: Makefile  Makefile.debug  Makefile.in  Makefile.opencv  Makefile.opencv.in  README  main-all.cpp  main-dual.cc  main-dual.cpp  main-single.cc  main-single.cpp  main-with-opencv.cc  main-with-opencv.cpp  xview.cpp  xview.h
src/: 1394cam.cc  1394cam.h  Makefile  Makefile.am  Makefile.in  common.h  main-dual.cc  main-single.cc  xview.h  yuv.h  yuv2rgb.cc
